[tool.poetry]
name = "pandoc-dblp"
version = "0.1.0"
description = ""
authors = ["Wonsup Yoon <pusnow@kaist.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
pandocfilters = "^1.4.3"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
